Bug 317473 - CSV exporter doesn't properly escape values with the delimiter
Summary: CSV exporter doesn't properly escape values with the delimiter
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.7
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-28 02:53 UTC by Robby Stephenson
Modified: 2013-03-28 03:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2013-03-28 02:53:45 UTC
An old commit back in 2010 dropped the escapeText() call. Reported on mailing list.

Reproducible: Always
Comment 1 Robby Stephenson 2013-03-28 03:54:17 UTC
Git commit 4a969303c9a28afa061afc2a5861c11951576ff7 by Robby Stephenson.
Committed on 28/03/2013 at 04:52.
Pushed by rstephenson into branch '2.3'.

Fix the CSV export to properly escape values with delimiter

An old commit  accidently removed the escapeText() call from one
of the text export sections. As a result, values that include the
delimiter (usually a comma) were not enclosed in double quotation marks.

Add a unit test, as well.
FIXED-IN: 2.3.8

M  +4    -0    ChangeLog
M  +3    -3    src/tests/CMakeLists.txt
M  +21   -5    src/tests/csvtest.cpp
M  +1    -1    src/tests/csvtest.h
M  +7    -4    src/translators/csvexporter.cpp
M  +2    -1    src/translators/csvexporter.h

http://commits.kde.org/tellico/4a969303c9a28afa061afc2a5861c11951576ff7