Fix the CSV export to properly escape values with delimiter

An old commit  accidently removed the escapeText() call from one
of the text export sections. As a result, values that include the
delimiter (usually a comma) were not enclosed in double quotation marks.

Add a unit test, as well.

BUG: 317473
FIXED-IN: 2.3.8